// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer - collapsed 1`] = `
Array [
  <div
    className="header__drawer"
  >
    <DrawerContents
      activeTab="How to use this"
    />
  </div>,
  <div
    className="header__overlay"
  />,
]
`;

exports[`Drawer - expanded 1`] = `
Array [
  <div
    className="header__drawer header__drawer--visible"
  >
    <DrawerContents
      activeTab="How to use this"
    />
  </div>,
  <div
    className="header__overlay header__overlay--visible"
  />,
]
`;
